# star-wars-chat-app

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.llm  Dockerfile.production.web  Dockerfile.stt  Dockerfile.tts  Dockerfile.web  EXPLAINABILITY_FEATURE.md  LICENSE  PRODUCTION_README.md  README.md  advanced_llm_preprocessor.py  analyze_characters.py  characters.json  chat_demo.py  check_db.py  create_real_embeddings.py  debug_rag.py  demo.py  demo_llm_context.py  deploy_digital_ocean.py  deploy_local.py  deploy_local_windows.py  docker-compose.production.yml  docker-compose.yml  enhanced_embedding_generator.py  env.example  final_character_processing.py  fix_dialogue_extraction.py  h -u origin 4-images-built  h -u origin need-to-add-mre-characters  init_database.py  init_db.sql  llm_enhancement_demo.py  llm_service_standalone.py  manual_character_setup.py  (+22 more)
data/llm_enhanced/: llm_enhanced_dialogue_complete.json  llm_enhanced_dialogue_readable.txt
data/pipeline_processed/: manual_enhanced_demo.json  pipeline_enhanced_complete.json  pipeline_enhanced_readable.txt
data/preprocessed/: enhanced_STAR WARS A NEW HOPE.txt  enhanced_STAR WARS THE RETURN OF THE JEDI.txt  enhanced_THE EMPIRE STRIKES BACK.txt  enhanced_original_trilogy_combined.txt
data/processed/: all_dialogue.json  character_stats.json
data/processed_complete/: complete_enhanced_dialogue.csv  complete_enhanced_dialogue.txt
data/raw/: Adventures of Luke Starkiller 1975.txt  STAR WARS A NEW HOPE.txt  STAR WARS THE ATTACK OF THE CLONES.txt  STAR WARS THE LAST JEDI.txt  STAR WARS THE PHANTOM MENACE.txt  STAR WARS THE RETURN OF THE JEDI.txt  STAR WARS THE REVENGE OF THE SITH.txt  THE EMPIRE STRIKES BACK.txt  THE PHANTOM MENACE.txt
data/star_wars_other_episodes/: STAR WARS EPISODE IX.txt  THE STAR WARS 1974.txt
frontend/: .dockerignore  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
llm-service/: .dockerignore  Dockerfile  characters.json  llm_service_standalone.py  requirements-llm.txt
notebooks/: dashboard_plan.txt  data_exploration.ipynb  deployment_plan.txt  embedding_test.ipynb  instructions
src/star_wars_rag/: __init__.py  api.py  app.py  chat.py  complete_pipeline.py  dashboard.py  data_processor.py  database.py  embeddings.py  improved_script_processor.py  llm.py  llm_script_preprocessor.py  llm_service.py  models.py  prompt.py  retrieval.py  script_preprocessor.py  stt_service.py  tts_service.py  web_app.py  web_app_api.py
src/star_wars_rag/core/: __init__.py  config.py  exceptions.py  interfaces.py  logging.py
src/star_wars_rag/services/: __init__.py  chat_service.py  llm_service.py  stt_service.py  tts_service.py
stt-service/: .dockerignore  Dockerfile  requirements-stt.txt  stt_service_standalone.py
tests/: conftest.py  test_app.py  test_dashboard_updates.py  test_data_processor.py  test_database_integration.py  test_embeddings.py  test_fastapi_backend.py  test_integration.py  test_llm_service.py  test_retrieval.py  test_script_preprocessor.py  test_stt_service.py  test_tts_service.py  test_web_interface.py
tts-service/: .dockerignore
